<resources>
    <string name="app_name">NSUCPCAdmin</string>
    <string name="welcome">Welcome</string>
    <string name="tagline_employer">Let’s help you find your perfect employee</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="add_jobs">Add Jobs</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="see_all_jobs">See All Jobs</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_jobs">All Jobs</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="type_old_password">Type old password</string>
    <string name="type_new_password">Type new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="job_post">Job Post</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="error_account">You have to become a admin to access the CPC employer app.</string>
    <string name="empty_password_error_message">Password cannot be empty</string>
    <string name="hide_the_company_name">Hide the company name</string>
    <string name="vacant_position">Vacant position</string>
    <string name="location">Location</string>
    <string name="number_of_employee_needed">Number of employee needed</string>
    <string name="deadline">Deadline</string>
    <string name="next">Next</string>
    <string name="company_name">Company name</string>
    <string name="choose_department">Choose department</string>
    <string name="choose_job_type">Choose job type</string>
    <string name="company_recruiter_email">Company recruiter email</string>
    <string name="set_salary_range">Set salary range</string>
    <string name="min_salary">Min salary</string>
    <string name="max_salary">Max salary</string>
    <string name="upload_a_pdf">Upload a PDF</string>
</resources>