<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mainmenu_option1"
        android:title="@string/home"
        app:showAsAction="never"/>

    <item android:id="@+id/mainmenu_option2"
        android:title="@string/add_jobs"
        app:showAsAction="never"/>

    <item android:id="@+id/mainmenu_option3"
        android:title="@string/search"
        app:showAsAction="never"/>

    <item android:id="@+id/mainmenu_option4"
        android:title="@string/all_jobs"
        app:showAsAction="never"/>

    <item android:id="@+id/mainmenu_option5"
        android:title="@string/change_password"
        app:showAsAction="never"/>

    <item android:id="@+id/mainmenu_option6"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>